# amplifier-module-provider-anthropic

./: .gitignore  README.md  install.sh  pyproject.toml
amplifier_anthropic_oauth/: __init__.py  auth.py  login.py
amplifier_mod_provider_anthropic/: __init__.py
amplifier_mod_provider_anthropic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
amplifier_module_provider_anthropic/: __init__.py  _cost.py  auth.py  claude_code.py  login.py
amplifier_module_provider_claude/: __init__.py  _cost.py  auth.py  login.py
docs/: FEATURE_COVERAGE.md
docs/plans/: 2026-04-17-phase3-remaining-items.md
routing/: claude-cli.yaml  claude.yaml
tests/: _helpers.py  conftest.py  test_advertised_context_window.py  test_behavioral.py  test_claude_header_capture.py  test_claude_header_parity.py  test_close.py  test_cloudflare_retry.py  test_concurrency.py  test_cost.py  test_cost_usd_json_serializable.py  test_error_body_json.py  test_error_translation.py  test_fable5_response.py  test_fallback.py  test_image_support.py  test_integration.py  test_large_system_prompt.py  test_list_models_families.py  test_llm_response_ordering.py  test_message_tracking.py  test_model_capabilities.py  test_model_pricing.py  test_oauth.py  test_oauth_transport.py  test_opus_47.py  test_pricing_and_vision.py  test_rate_limit_headers.py  test_readme_retry_docs.py  test_reasoning_effort.py  test_refusal_fallback.py  test_retry.py  test_retry_config_fields.py  test_shared_state.py  test_thinking_sanitization.py  test_throttle.py  test_tool_parsing.py  test_tool_repair.py  test_tool_validation.py  test_usage_fields.py  (+2 more)
