[project]
name = "amplifier-module-provider-anthropic"
version = "1.0.0"
description = "Anthropic provider for Amplifier with Claude Pro/Max OAuth"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Grisha Szep" },
]
dependencies = [
    "anthropic>=0.96.0",
]

[project.scripts]
amplifier-anthropic-login = "amplifier_module_provider_anthropic.login:main"
amplifier-claude-login = "amplifier_module_provider_anthropic.login:main"

[project.entry-points."amplifier.modules"]
provider-anthropic = "amplifier_module_provider_anthropic:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true


[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_anthropic",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "-m not long",
]
asyncio_mode = "strict"
markers = [
    "long: marks tests as long-running",
]

[dependency-groups]
dev = [
    "amplifier-core>=1.6.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
