[project]
name = "amplifier-module-provider-anthropic"
version = "1.0.0"
description = "Reference provider module - Anthropic Claude integration for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "anthropic>=0.96.0",
]

[project.scripts]
amplifier-anthropic-login = "amplifier_anthropic_oauth.login:main"
amplifier-claude-login = "amplifier_anthropic_oauth.login:main"

[project.entry-points."amplifier.modules"]
provider-anthropic = "amplifier_module_provider_anthropic:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_anthropic",
    "amplifier_anthropic_oauth",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib -m 'not live_oauth and not local_header_capture'"
asyncio_mode = "strict"
markers = [
    "live_oauth: opt-in tests that call Anthropic with stored OAuth credentials",
    "local_header_capture: opt-in local capture of installed Claude Code HTTPS headers",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

